--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
     <main>
     <div class="form1">
         
-        <form action="connection.php">
+        <form action="assets/connection.php">
             <label>Username or email</label><br>
             <textarea></textarea><br>
             <label>Password</label><br>
